<resources>
    <string name="app_name">MFLI</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_your_account">Sign Up Your Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="user_name">User Name</string>
    <string name="email_user_name">Email ID/User Name</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="login_to_your_account">Login To Your Account</string>
</resources>
