<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@color/colorYellow">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_to_your_account"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimen_16sp"
        android:fontFamily="@font/colortube"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvTitle"
        android:layout_margin="@dimen/dimen_16dp"
        android:padding="@dimen/dimen_16dp"
        android:gravity="center"
        />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTitle"
        app:hintEnabled="false"
        android:layout_margin="@dimen/dimen_16dp">
    <EditText
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress|text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:hint="@string/email_user_name"
        android:padding="16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_marginTop="@dimen/dimen_28dp" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_below="@id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:hintEnabled="false"
        android:textColorHint="@android:color/white"
        android:layout_margin="@dimen/dimen_16dp">
        <EditText
            android:id="@+id/etPassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="16dp"
            android:layout_below="@id/etEmail"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/dimen_16dp"
            android:hint="@string/password"
            android:textColorHint="@android:color/white"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btnLogin"
        android:layout_below="@id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_28dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:text="@string/log_in"
        android:padding="@dimen/dimen_16dp"
        android:background="@drawable/border"
        android:textColor="@android:color/white"
        android:fontFamily="@font/colortube"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right_white_24dp"
        android:drawableRight="@drawable/ic_keyboard_arrow_right_white_24dp"
        android:layout_marginLeft="@dimen/dimen_16dp"
        />
</RelativeLayout>
