
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@color/colorYellow">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_your_account"
        android:textColor="@android:color/white"
        android:textSize="@dimen/dimen_16sp"
        android:fontFamily="@font/colortube"
        android:layout_marginTop="@dimen/dimen_28dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tvTitle"
        android:layout_margin="@dimen/dimen_16dp"
        android:padding="@dimen/dimen_16dp"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/layoutName"
        android:layout_below="@id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/etFirstName"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/first_name"
            android:padding="16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="@dimen/dimen_28dp"
            android:layout_weight="1"
            android:nextFocusDown="@id/etLastName" ><requestFocus/></EditText>
        <EditText
            android:id="@+id/etLastName"
            android:inputType="text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/last_name"
            android:padding="16dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginTop="@dimen/dimen_28dp"
            android:layout_weight="1"
            android:nextFocusDown="@id/etEmail"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:hint="@string/email_id"
        android:padding="16dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_below="@id/layoutName"
        android:nextFocusDown="@id/etUserName"/>

    <EditText
        android:id="@+id/etUserName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:hint="@string/user_name"
        android:padding="16dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginLeft="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginRight="@dimen/dimen_16dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:layout_below="@id/etEmail"
        android:nextFocusDown="@id/etPassword"/>


    <LinearLayout
        android:id="@+id/layoutPassword"
        android:layout_below="@id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/dimen_16dp">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:hintEnabled="false"
            android:textColorHint="@android:color/white">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:padding="16dp"
                android:layout_below="@id/etEmail"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:hint="@string/password"
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>
        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginLeft="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            />
        <ImageView
            android:layout_width="@dimen/dimen_60dp"
            android:layout_height="@dimen/dimen_60dp"
            android:src="@drawable/ic_signup"
            android:layout_gravity="center"
            />

        <!--<Button
            android:id="@+id/btnLogin"
            android:layout_below="@id/tilPassword"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_28dp"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginRight="@dimen/dimen_16dp"
            android:text="Sign Up"
            android:padding="@dimen/dimen_16dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_white_24dp"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_white_24dp"
            android:layout_marginLeft="@dimen/dimen_16dp"
            />
-->
    </LinearLayout>


    <View
        android:id="@+id/bar"
        android:layout_below="@id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@android:color/white"
        android:layout_margin="@dimen/dimen_16dp"/>

    <LinearLayout
        android:id="@+id/layoutOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bar">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_75dp"
            android:layout_weight="1"
            android:src="@drawable/ic_facebook"
            android:padding="@dimen/dimen_8dp"/>
        <ImageView
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen_75dp"
            android:layout_weight="1"
            android:src="@drawable/ic_google_plus"
            android:padding="@dimen/dimen_8dp"/>
    </LinearLayout>

</RelativeLayout>
